# Legal-Temis

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/legislacion/: app.py  cache.py  cobertura.py  config.py  enrutador.py  modelos.py  seguridad.py
api/src/legislacion/adaptadores/: boe.py  eurlex.py
api/src/legislacion/ia/: anthropic_ia.py  base.py  comprension.py  cribado.py  fabrica.py  openai_ia.py  redaccion.py
api/tests/: test_app.py  test_boe.py  test_cache.py  test_cobertura.py  test_enrutador.py  test_eurlex.py  test_fabrica.py  test_ia.py  test_seguridad.py
